--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Front End Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>I am responsible for developing and optimizing user interfaces for web applications. My role involves creating modern and intuitive user interfaces using cutting-edge technologies and frameworks. I collaborate closely with designers and back-end developers to create cohesive and functional web applications. I also focus on optimizing the performance of user interfaces to enhance the user experience.I'm ready to take on new projects and help bring your creative ideas to life!</p>
           </div>
         </div>
       </div>
@@ -312,7 +312,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Web Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>I am entrusted with the responsibility of crafting dynamic and interactive websites. I utilize a wide range of programming languages and technologies to create visually appealing and functional websites. Additionally, I collaborate closely with designers and front-end developers to ensure seamless integration of design elements and user interfaces. My expertise lies in implementing responsive design techniques to optimize website performance across various devices and screen sizes. </p>
           </div>
         </div>
       </div>
@@ -328,7 +328,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Intern</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>I gained hands-on experience in web development. I worked closely with the development team, assisting in various aspects of web project implementation. This included collaborating with senior developers in coding and debugging website components, participating in brainstorming sessions for creative design and functionality ideas, and conducting research on emerging web technologies and trends to inform project development.</p>
           </div>
         </div>
       </div>
@@ -350,7 +350,7 @@
           <div class="card-body">
             <div class="h5">Master of Information Technology</div>
             <p class="category">University of Computer Science</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>I pursued and successfully completed my Master's Degree in Information Technology at the University of Computer Science. This program equipped me with a comprehensive understanding of advanced concepts and technologies in the field of IT. It provided me with valuable skills in areas such as software development, database management, and network administration. The knowledge and expertise gained during this program have been instrumental in my professional journey as a Web Developer, Graphic Designer, and Photographer.</p>
           </div>
         </div>
       </div>
@@ -367,7 +367,7 @@
           <div class="card-body">
             <div class="h5">Bachelor of Computer Science</div>
             <p class="category">University of Computer Science</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>I completed my Bachelor's Degree in Computer Science at the University of Computer Science. This program provided me with a strong foundation in computer science principles, including programming, algorithms, and data structures. It also introduced me to various aspects of software development and computer systems. The knowledge and skills gained during this program laid the groundwork for my further studies and subsequent career in Information Technology.</p>
           </div>
         </div>
       </div>
@@ -384,7 +384,7 @@
           <div class="card-body">
             <div class="h5">Science and Mathematics</div>
             <p class="category">School of Secondary board</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>During my time at the School of Secondary Board, I pursued a specialized curriculum focusing on Science and Mathematics. This track provided me with a strong foundation in core scientific and mathematical principles. I engaged in in-depth studies in subjects such as Physics, Chemistry, Biology, and advanced Mathematics. This educational background laid the groundwork for my subsequent academic pursuits in Computer Science and Information Technology.</p>
           </div>
         </div>
       </div>
@@ -409,7 +409,7 @@
                 <p class="category">CEO / WEBM</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+                <p>Aiyana, the CEO of WEBM, can attest to my proficiency in web development, graphic design, and photography. Her firsthand experience working with me on various projects highlights my ability to deliver high-quality work with a creative touch. Please feel free to reach out to Aiyana for further insights into my skills and contributions.</p>
               </div>
             </div>
           </div>
@@ -420,7 +420,7 @@
                 <p class="category">CEO / Creativem</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+                <p>Braiden, the CEO of CREATIVEM, can provide valuable insights into my contributions as a Front End Developer. His firsthand experience working with me showcases my expertise in creating visually appealing and user-friendly digital experiences. I encourage you to contact Braiden for additional details about my skills and performance.</p>
               </div>
             </div>
           </div>
@@ -431,7 +431,7 @@
                 <p class="category">CEO / Webnote</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+                <p>Alexander, the CEO of WEBNOTE, can offer valuable insights into my proficiency as a Web Developer. His firsthand experience working with me highlights my ability to create dynamic and interactive websites. I encourage you to contact Alexander for further information about my skills and contributions.</p>
               </div>
             </div>
           </div>
